--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,8 +6,10 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/TileDB-Inc/{{ name }}/archive/{{ version }}.tar.gz
-  sha256: 2e44e2b543cb6e4cb9aff14dd3d98ef0c732acff73366246abf51d21a7f28241
+  #url: https://github.com/TileDB-Inc/{{ name }}/archive/{{ version }}.tar.gz
+  #sha256: f4b1d9ed0092a3eaac2c8fd48f99b1b33c564e28a7c4e6f4e96f345212be0e7e
+  git_url: https://github.com/TileDB-Inc/TileDB
+  git_tag: dlh/azurite-in-ci
   patches:
     - 0001-Conda-only-patch-capnproto-build-to-work-with-anacon.patch
     - 0002-libkj-gcc93.patch
