--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,8 +6,10 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/TileDB-Inc/{{ name }}/archive/{{ version }}.tar.gz
-  sha256: e5460824e32b5ce19800b183ac748624de30cab6a8de3c1c580789c7d4fd10a5
+  #url: https://github.com/TileDB-Inc/{{ name }}/archive/{{ version }}.tar.gz
+  #sha256:
+  git_url: https://github.com/TileDB-Inc/TileDB
+  git_rev: fae57cac10073d89c29a963b677f8387e89aadd5
   patches:
     - 0001-Conda-only-patch-capnproto-build-to-work-with-anacon.patch
 
