--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,8 +8,8 @@ package:
 source:
   #url: https://github.com/TileDB-Inc/{{ name }}/archive/{{ version }}.tar.gz
   #sha256: d465e5606437c2cb507d8225877b8b4daf41308fd129c4aa00cb83131acc4343
-  git_url: https://github.com/ihnorton/TileDB
-  git_rev: 38f8989508afd504c6adbcecc95484c4a4de3ddc
+  git_url: https://github.com/TileDB-Inc/TileDB
+  git_rev: 91038f750d6d11649203f1295882949e11ec7de6
 
 build:
   number: 0
